fix: issue with vertical aligned link icon

--- a/packages/components/src/components/link/link.scss
+++ b/packages/components/src/components/link/link.scss
@@ -9,6 +9,9 @@
 @use "../../styles/internal/link-components";
 
 .db-link {
+	--db-icon-margin-start: #{variables.$db-spacing-fixed-2xs};
+	--db-icon-vertical-align: top;
+
 	@extend %db-default-link;
 	@extend %db-overwrite-font-size-md;
 
@@ -21,25 +24,11 @@
 		&:not([data-variant="inline"]) {
 			@include icons.set-icon("arrow_right", "after");
 		}
-
-		&:not([data-show-icon-leading="false"])::after {
-			vertical-align: top;
-		}
 	}
 
 	&[data-content="external"] {
 		&:not([data-variant="inline"]) {
 			@include icons.set-icon("arrow_up_right", "after");
-		}
-	}
-
-	&[data-content="internal"],
-	&[data-content="external"] {
-		--db-icon-margin-start: #{variables.$db-spacing-fixed-2xs};
-
-		&::after {
-			/* stylelint-disable-next-line db-ux/use-spacings */
-			margin-inline-start: var(--db-icon-margin-start);
 		}
 	}
 
