--- a/packages/foundations/scss/icons/_icon-helpers.scss
+++ b/packages/foundations/scss/icons/_icon-helpers.scss
@@ -151,7 +151,7 @@ $default-icon-font-size: var(--db-icon-font-size, #{$default-icon-size-rem});
 	/* stylelint-disable-next-line declaration-property-value-no-unknown */
 	speak: never; // Hiding icon from screenreaders
 	text-transform: none;
-	vertical-align: middle;
+	vertical-align: var(--db-icon-vertical-align, middle);
 	block-size: $default-icon-font-size;
 	inline-size: $default-icon-font-size;
 
